<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtCreateJPTitle"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:text="Create Job Posting"
                android:textSize="34sp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="50dp"/>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:context=".job_posting.JobPostingActivity"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/txtJPTitleField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Job Title"
                android:layout_marginLeft="15dp"/>

            <EditText
                android:id="@+id/etJPTitle"
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textShortMessage"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/txtJPType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Job Type"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"/>


            <Spinner
                android:id="@+id/etJPType"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/txtDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duration"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"/>

            <EditText
                android:id="@+id/etDuration"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"/>

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/txtWage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wage"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"/>

            <EditText
                android:id="@+id/etWage"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/etErrorJP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/btnCreateJP"
                android:layout_width="338dp"
                android:layout_height="56dp"
                android:text="Create Job Posting"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"/>


            <Button
                android:id="@+id/btnJPHomePage"
                android:layout_width="338dp"
                android:layout_height="56dp"
                android:text="Return To Home Page"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>