...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false">

    <Button
        android:id="@+id/search_Manual"
        android:layout_width="221dp"
        android:layout_height="117dp"
        android:layout_below="@+id/map"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
...
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/Search_Preference"
        android:layout_width="223dp"
        android:layout_height="125dp"
        android:layout_below="@+id/map"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
...
